--- a/index.html
+++ b/index.html
@@ -2,10 +2,14 @@
 <html lang="en">
 
 <head>
+  <script disable-devtool-auto src="https://cdn.jsdelivr.net/npm/disable-devtool"></script>
+  <link rel="manifest" href="/manifest.json" />
+  <meta name="theme-color" content="#020617" />
+  <link rel="icon" href="/favicon.ico" />
   <meta charset="UTF-8" />
-  <link rel="icon" type="image/svg+xml" href="/icon.ico" />
+  <link rel="icon" type="image/svg+xml" href="/favicon.ico" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>ALX CAPSTONE - MOVIE</title>
+  <title>SlateFlix - Watch all your favorite movies & tv shows for free </title>
 </head>
 
 <body>
