added pwa configurations

--- a/index.html
+++ b/index.html
@@ -1,14 +1,17 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
 
 <head>
-  <script disable-devtool-auto src="https://cdn.jsdelivr.net/npm/disable-devtool"></script>
-  <link rel="manifest" href="/manifest.json" />
-  <meta name="theme-color" content="#020617" />
   <meta charset="UTF-8" />
-  <link rel="icon" type="image/svg+xml" href="/favicon.ico" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>SlateFlix - Watch all your favorite movies & tv shows for free </title>
+  <title>Slateflix - Watch all your favorite movies & TV shows</title>
+
+  <link rel="manifest" href="/site.webmanifest" />
+  <meta name="theme-color" content="#020617" />
+
+  <link rel="icon" href="/favicon.ico" />
+
+  <script disable-devtool-auto src="https://cdn.jsdelivr.net/npm/disable-devtool"></script>
 </head>
 
 <body>
