--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
   <link rel="icon" href="/favicon.ico" />
 
-
+  <script disable-devtool-auto src="https://cdn.jsdelivr.net/npm/disable-devtool"></script>
 </head>
 
 <body>
